src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE

Grammar

Rule 0     S' -> statement
Rule 1     statement -> PROC NAME ( expression )
Rule 2     statement -> COMMENT
Rule 3     statement -> PRINTLINE
Rule 4     statement -> expression
Rule 5     statement -> PRINT PRINTLINE
Rule 6     statement -> CASE WHEN expression THEN statement
Rule 7     statement -> CASE expression
Rule 8     statement -> statement WHEN expression THEN statement
Rule 9     statement -> ALEATORIO LPAREN RPAREN
Rule 10    statement -> MOVER LPAREN MOVIMIENTO RPAREN
Rule 11    expression -> expression + expression
Rule 12    expression -> expression - expression
Rule 13    expression -> expression * expression
Rule 14    expression -> expression / expression
Rule 15    relation -> GT
Rule 16    relation -> LT
Rule 17    relation -> GTE
Rule 18    relation -> LTE
Rule 19    relation -> NE
Rule 20    relation -> EQUAL
Rule 21    expression -> expression relation expression
Rule 22    expression -> ISTRUE ( expression )
Rule 23    expression -> - expression
Rule 24    expression -> ( expression )
Rule 25    expression -> INTEGER
Rule 26    expression -> BOOL
Rule 27    expression -> NAME
Rule 28    expression -> DEF ( NAME , expression )
Rule 29    expression -> NAME ( expression )
Rule 30    expression -> ALTER ( NAME , expression )
Rule 31    expression -> REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
Rule 32    expression -> REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
Rule 33    expression -> UNTIL LPAREN expression RPAREN BOOL SEMICOLON
Rule 34    expression -> UNTIL LPAREN expression RPAREN
Rule 35    expression -> UNTIL LPAREN expression RPAREN SEMICOLON
Rule 36    expression -> WHILE BOOL LPAREN expression RPAREN SEMICOLON

Terminals, with rules where they appear

(                    : 1 22 24 28 29 30
)                    : 1 22 24 28 29 30
*                    : 13
+                    : 11
,                    : 28 30
-                    : 12 23
/                    : 14
ALEATORIO            : 9
ALTER                : 30
BOOL                 : 26 33 36
BREAK                : 31
CASE                 : 6 7
COMMENT              : 2
DEF                  : 28
ELSE                 : 
EQUAL                : 20
GT                   : 15
GTE                  : 17
INTEGER              : 25
ISTRUE               : 22
LPAREN               : 9 10 31 32 33 34 35 36
LT                   : 16
LTE                  : 18
MOVER                : 10
MOVIMIENTO           : 10
NAME                 : 1 27 28 29 30
NE                   : 19
PRINT                : 5
PRINTLINE            : 3 5
PROC                 : 1
REPEAT               : 31 32
RPAREN               : 9 10 31 32 33 34 35 36
SEMICOLON            : 31 31 31 32 32 33 35 36
THEN                 : 6 8
UNTIL                : 33 34 35
WHEN                 : 6 8
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 6 7 8 11 11 12 12 13 13 14 14 21 21 22 23 24 28 29 30 31 32 33 34 35 36
relation             : 21
statement            : 6 8 8 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . PROC NAME ( expression )
    (2) statement -> . COMMENT
    (3) statement -> . PRINTLINE
    (4) statement -> . expression
    (5) statement -> . PRINT PRINTLINE
    (6) statement -> . CASE WHEN expression THEN statement
    (7) statement -> . CASE expression
    (8) statement -> . statement WHEN expression THEN statement
    (9) statement -> . ALEATORIO LPAREN RPAREN
    (10) statement -> . MOVER LPAREN MOVIMIENTO RPAREN
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    PROC            shift and go to state 2
    COMMENT         shift and go to state 6
    PRINTLINE       shift and go to state 7
    PRINT           shift and go to state 8
    CASE            shift and go to state 9
    ALEATORIO       shift and go to state 10
    MOVER           shift and go to state 11
    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    statement                      shift and go to state 1
    expression                     shift and go to state 5

state 1

    (0) S' -> statement .
    (8) statement -> statement . WHEN expression THEN statement

    WHEN            shift and go to state 21


state 2

    (1) statement -> PROC . NAME ( expression )

    NAME            shift and go to state 22


state 3

    (27) expression -> NAME .
    (29) expression -> NAME . ( expression )

    +               reduce using rule 27 (expression -> NAME .)
    -               reduce using rule 27 (expression -> NAME .)
    *               reduce using rule 27 (expression -> NAME .)
    /               reduce using rule 27 (expression -> NAME .)
    GT              reduce using rule 27 (expression -> NAME .)
    LT              reduce using rule 27 (expression -> NAME .)
    GTE             reduce using rule 27 (expression -> NAME .)
    LTE             reduce using rule 27 (expression -> NAME .)
    NE              reduce using rule 27 (expression -> NAME .)
    EQUAL           reduce using rule 27 (expression -> NAME .)
    WHEN            reduce using rule 27 (expression -> NAME .)
    $end            reduce using rule 27 (expression -> NAME .)
    )               reduce using rule 27 (expression -> NAME .)
    THEN            reduce using rule 27 (expression -> NAME .)
    SEMICOLON       reduce using rule 27 (expression -> NAME .)
    RPAREN          reduce using rule 27 (expression -> NAME .)
    (               shift and go to state 23


state 4

    (24) expression -> ( . expression )
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 24

state 5

    (4) statement -> expression .
    (11) expression -> expression . + expression
    (12) expression -> expression . - expression
    (13) expression -> expression . * expression
    (14) expression -> expression . / expression
    (21) expression -> expression . relation expression
    (15) relation -> . GT
    (16) relation -> . LT
    (17) relation -> . GTE
    (18) relation -> . LTE
    (19) relation -> . NE
    (20) relation -> . EQUAL

    WHEN            reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    +               shift and go to state 25
    -               shift and go to state 26
    *               shift and go to state 27
    /               shift and go to state 28
    GT              shift and go to state 30
    LT              shift and go to state 31
    GTE             shift and go to state 32
    LTE             shift and go to state 33
    NE              shift and go to state 34
    EQUAL           shift and go to state 35

    relation                       shift and go to state 29

state 6

    (2) statement -> COMMENT .

    WHEN            reduce using rule 2 (statement -> COMMENT .)
    $end            reduce using rule 2 (statement -> COMMENT .)


state 7

    (3) statement -> PRINTLINE .

    WHEN            reduce using rule 3 (statement -> PRINTLINE .)
    $end            reduce using rule 3 (statement -> PRINTLINE .)


state 8

    (5) statement -> PRINT . PRINTLINE

    PRINTLINE       shift and go to state 36


state 9

    (6) statement -> CASE . WHEN expression THEN statement
    (7) statement -> CASE . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    WHEN            shift and go to state 37
    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 38

state 10

    (9) statement -> ALEATORIO . LPAREN RPAREN

    LPAREN          shift and go to state 39


state 11

    (10) statement -> MOVER . LPAREN MOVIMIENTO RPAREN

    LPAREN          shift and go to state 40


state 12

    (23) expression -> - . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 41

state 13

    (22) expression -> ISTRUE . ( expression )

    (               shift and go to state 42


state 14

    (25) expression -> INTEGER .

    +               reduce using rule 25 (expression -> INTEGER .)
    -               reduce using rule 25 (expression -> INTEGER .)
    *               reduce using rule 25 (expression -> INTEGER .)
    /               reduce using rule 25 (expression -> INTEGER .)
    GT              reduce using rule 25 (expression -> INTEGER .)
    LT              reduce using rule 25 (expression -> INTEGER .)
    GTE             reduce using rule 25 (expression -> INTEGER .)
    LTE             reduce using rule 25 (expression -> INTEGER .)
    NE              reduce using rule 25 (expression -> INTEGER .)
    EQUAL           reduce using rule 25 (expression -> INTEGER .)
    WHEN            reduce using rule 25 (expression -> INTEGER .)
    $end            reduce using rule 25 (expression -> INTEGER .)
    )               reduce using rule 25 (expression -> INTEGER .)
    THEN            reduce using rule 25 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 25 (expression -> INTEGER .)
    RPAREN          reduce using rule 25 (expression -> INTEGER .)


state 15

    (26) expression -> BOOL .

    +               reduce using rule 26 (expression -> BOOL .)
    -               reduce using rule 26 (expression -> BOOL .)
    *               reduce using rule 26 (expression -> BOOL .)
    /               reduce using rule 26 (expression -> BOOL .)
    GT              reduce using rule 26 (expression -> BOOL .)
    LT              reduce using rule 26 (expression -> BOOL .)
    GTE             reduce using rule 26 (expression -> BOOL .)
    LTE             reduce using rule 26 (expression -> BOOL .)
    NE              reduce using rule 26 (expression -> BOOL .)
    EQUAL           reduce using rule 26 (expression -> BOOL .)
    WHEN            reduce using rule 26 (expression -> BOOL .)
    $end            reduce using rule 26 (expression -> BOOL .)
    )               reduce using rule 26 (expression -> BOOL .)
    THEN            reduce using rule 26 (expression -> BOOL .)
    SEMICOLON       reduce using rule 26 (expression -> BOOL .)
    RPAREN          reduce using rule 26 (expression -> BOOL .)


state 16

    (28) expression -> DEF . ( NAME , expression )

    (               shift and go to state 43


state 17

    (30) expression -> ALTER . ( NAME , expression )

    (               shift and go to state 44


state 18

    (31) expression -> REPEAT . LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> REPEAT . LPAREN expression SEMICOLON RPAREN SEMICOLON

    LPAREN          shift and go to state 45


state 19

    (33) expression -> UNTIL . LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> UNTIL . LPAREN expression RPAREN
    (35) expression -> UNTIL . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 46


state 20

    (36) expression -> WHILE . BOOL LPAREN expression RPAREN SEMICOLON

    BOOL            shift and go to state 47


state 21

    (8) statement -> statement WHEN . expression THEN statement
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 48

state 22

    (1) statement -> PROC NAME . ( expression )

    (               shift and go to state 49


state 23

    (29) expression -> NAME ( . expression )
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 50

state 24

    (24) expression -> ( expression . )
    (11) expression -> expression . + expression
    (12) expression -> expression . - expression
    (13) expression -> expression . * expression
    (14) expression -> expression . / expression
    (21) expression -> expression . relation expression
    (15) relation -> . GT
    (16) relation -> . LT
    (17) relation -> . GTE
    (18) relation -> . LTE
    (19) relation -> . NE
    (20) relation -> . EQUAL

    )               shift and go to state 51
    +               shift and go to state 25
    -               shift and go to state 26
    *               shift and go to state 27
    /               shift and go to state 28
    GT              shift and go to state 30
    LT              shift and go to state 31
    GTE             shift and go to state 32
    LTE             shift and go to state 33
    NE              shift and go to state 34
    EQUAL           shift and go to state 35

    relation                       shift and go to state 29

state 25

    (11) expression -> expression + . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 52

state 26

    (12) expression -> expression - . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 53

state 27

    (13) expression -> expression * . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 54

state 28

    (14) expression -> expression / . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 55

state 29

    (21) expression -> expression relation . expression
    (11) expression -> . expression + expression
    (12) expression -> . expression - expression
    (13) expression -> . expression * expression
    (14) expression -> . expression / expression
    (21) expression -> . expression relation expression
    (22) expression -> . ISTRUE ( expression )
    (23) expression -> . - expression
    (24) expression -> . ( expression )
    (25) expression -> . INTEGER
    (26) expression -> . BOOL
    (27) expression -> . NAME
    (28) expression -> . DEF ( NAME , expression )
    (29) expression -> . NAME ( expression )
    (30) expression -> . ALTER ( NAME , expression )
    (31) expression -> . REPEAT LPAREN expression SEMICOLON BREAK SEMICOLON RPAREN SEMICOLON
    (32) expression -> . REPEAT LPAREN expression SEMICOLON RPAREN SEMICOLON
    (33) expression -> . UNTIL LPAREN expression RPAREN BOOL SEMICOLON
    (34) expression -> . UNTIL LPAREN expression RPAREN
    (35) expression -> . UNTIL LPAREN expression RPAREN SEMICOLON
    (36) expression -> . WHILE BOOL LPAREN expression RPAREN SEMICOLON

    ISTRUE          shift and go to state 13
    -               shift and go to state 12
    (               shift and go to state 4
    INTEGER         shift and go to state 14
    BOOL            shift and go to state 15
    NAME            shift and go to state 3
    DEF             shift and go to state 16
    ALTER           shift and go to state 17
    REPEAT          shift and go to state 18
    UNTIL           shift and go to state 19
    WHILE           shift and go to state 20

    expression                     shift and go to state 56

state 30

    (15) relation -> GT .
